院校和志愿相关页面的优化与问题修复。

--- a/miniapp/src/pages/majors/intended/index.less
+++ b/miniapp/src/pages/majors/intended/index.less
@@ -197,7 +197,7 @@
 
 .intended-majors-page__content {
   flex: 1;
-  padding: 32rpx;
+  padding: 32rpx 16rpx;
   max-width: 1024rpx;
   margin: 0 auto;
   width: 100%;
