--- a/miniapp/src/pages/index/index.less
+++ b/miniapp/src/pages/index/index.less
@@ -136,6 +136,12 @@
   border-radius: 24rpx;
 }
 
+// “开启探索”（全面评估）卡片使用更明显的背景色
+.index-page__card-inner--full {
+  border-left-color: rgba(26, 64, 153, 0.3);
+  background: linear-gradient(to bottom right, rgba(26, 64, 153, 0.08), #fff);
+}
+
 .index-page__card-header {
   display: flex;
   align-items: flex-start;
