修改志愿方案专业组内专业显示方式

--- a/miniapp/src/pages/assessment/popular-majors/index.less
+++ b/miniapp/src/pages/assessment/popular-majors/index.less
@@ -138,7 +138,9 @@
 
 .popular-majors-page__header-content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: baseline;
+  flex-wrap: wrap;
   gap: 16rpx;
 }
 
