--- a/miniapp/src/pages/majors/intended/index.less
+++ b/miniapp/src/pages/majors/intended/index.less
@@ -1880,7 +1880,8 @@
 [data-enrollment-major="true"] {
   // 招生专业标记
   font-weight: 600;
-  color: #000;
+  // 与学校名称做区分：招生专业用主题蓝
+  color: #1A4099;
 }
 
 // 样式标记：移除志愿
@@ -2071,7 +2072,8 @@
 }
 
 .intended-majors-page__wishlist-item-plan-major-value {
-  color: #000;
+  // 与学校名称做区分：招生专业用主题蓝
+  color: #1A4099;
   font-weight: 600;
   display: inline-flex;
   align-items: center;
