--- a/miniapp/src/pages/assessment/popular-majors/index.less
+++ b/miniapp/src/pages/assessment/popular-majors/index.less
@@ -465,6 +465,28 @@
   gap: 16rpx;
 }
 
+.popular-majors-page__major-score {
+  display: flex;
+  align-items: center;
+  gap: 8rpx;
+  padding: 8rpx 16rpx;
+  background: rgba(26, 64, 153, 0.1);
+  border-radius: 12rpx;
+  border: 2rpx solid rgba(26, 64, 153, 0.2);
+}
+
+.popular-majors-page__major-score-label {
+  font-size: 24rpx;
+  color: #666;
+  font-weight: 500;
+}
+
+.popular-majors-page__major-score-value {
+  font-size: 28rpx;
+  font-weight: 600;
+  color: #1A4099;
+}
+
 .popular-majors-page__major-result {
   display: flex;
   align-items: center;
