修改探索成果页面，意向身份显示的文字 修改志愿方案页面router返回逻辑

--- a/miniapp/src/pages/assessment/provinces/index.less
+++ b/miniapp/src/pages/assessment/provinces/index.less
@@ -59,12 +59,28 @@
   margin-bottom: 32rpx;
 }
 
+.provinces-page__selected-header {
+  display: flex;
+  align-items: baseline;
+  gap: 16rpx;
+  flex-wrap: nowrap;
+  margin-bottom: 16rpx;
+}
+
 .provinces-page__selected-title {
   font-size: 28rpx;
   font-weight: 600;
   color: #1A4099;
-  margin-bottom: 16rpx;
-  display: block;
+  margin-bottom: 0;
+  white-space: nowrap;
+}
+
+.provinces-page__selected-desc {
+  font-size: 24rpx;
+  color: rgba(31, 41, 55, 0.7);
+  line-height: 1.5;
+  margin-bottom: 0;
+  white-space: nowrap;
 }
 
 .provinces-page__selected-list {
